Fix borders, shadows, gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,14 +234,18 @@ img {
     width: 270px;
     height: 368px;
     background: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
     
+}
+.section4__items__border {
+  display: block;
+  padding: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .section4__list__items:not(:last-child) {
     margin-right: 30px;
 }
-.section4__list__items>h3 {
+.section4__list__items>div>h3 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -250,9 +254,9 @@ img {
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    margin-top: 30px;
+    
 }
-.section4__list__items>p {
+.section4__list__items>div>p {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -352,26 +356,31 @@ img {
   margin-left: 215px;
   margin-bottom: 94px;
   flex-wrap: wrap;
+  gap: 30px;
 }
 .portfolio-works__items {
-  box-sizing: border-box;
-  
   width: 370px;
   height: 404px;
   left: 215px;
   top: 262px;
   background: #FFFFFF;
-  border: 1px solid #EEEEEE;
 }
-.portfolio-works__items:not(:last-child) {
+/* .portfolio-works__items:not(:nth-child(3n)) {
   margin-right: 30px;
-  
 }
 .portfolio-works__items:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
+} */
+.portfolio-works__items__border {
+  padding: 20px;
+  border-left: 1px solid #EEEEEE;
+  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
 }
-
-.portfolio-works__items>h2 {
+.portfolio-works__items:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+} 
+.portfolio-works__items>div>h2 {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
@@ -379,10 +388,9 @@ img {
   line-height: 36px;
   letter-spacing: 0.06em;
   color: #212121;
-  margin-top: 20px;
-  margin-left: 24px;
 }
-.portfolio-works__items>p {
+.portfolio-works__items>div>p {
+  margin: 4px;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
@@ -390,5 +398,4 @@ img {
   line-height: 30px;
   letter-spacing: 0.03em;
   color: #757575;
-  margin-left: 24px;
 }
